# sudoku-savant

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  sudoku-savant.desktop.in  sudoku.glade  sudoku.gladep
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  cs.po  de.gmo  de.po  fr.gmo  fr.po  sudoku-savant.pot
src/: .cvsignore  Makefile.am  aboutbox.cpp  aboutbox.h  actions.h  bitmask.cpp  bitmask.h  board.cpp  board.h  canvas.cpp  canvas.h  colouring.cpp  colouring.h  completesequences.cpp  completesequences.h  component.cpp  component.h  constants.h  crosssequences.cpp  crosssequences.h  date.cpp  date.h  displaygrid.cpp  displaygrid.h  document.cpp  document.h  enums.h  filedialog.cpp  filedialog.h  freedom.cpp  freedom.h  generator.cpp  generator.h  geodialog.cpp  geodialog.h  geometry.cpp  geometry.h  hiddensubsets.cpp  hiddensubsets.h  interface.c  (+58 more)
